--- a/weldx/schemas/weldx.bam.de/weldx/core/graph/di_node-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/graph/di_node-1.0.0.yaml
@@ -34,7 +34,7 @@ properties:
   name:
     anyOf:
       - type: string
-      - tag: "asdf://weldx.bam.de/weldx/tags/uuid-1.0.0"
+      - tag: "asdf://weldx.bam.de/weldx/tags/uuid-1.*"
   edges:
     type: array
     items:
