--- a/weldx/schemas/weldx.bam.de/weldx/debug/test_shape_validator-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/debug/test_shape_validator-1.0.0.yaml
@@ -34,9 +34,7 @@ properties:
     wx_shape: [1]
 
   timeseries:
-    oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
-      - tag: "tag:weldx.bam.de:weldx/core/time_series-1.*" # legacy_tag
+    tag: "asdf://weldx.bam.de/weldx/tags/core/time_series-1.*"
     wx_shape: [1]
 
   nested_prop:
@@ -51,10 +49,8 @@ properties:
 
   time_prop:
     oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/time/timedeltaindex-1.0.0"
-      - tag: "tag:weldx.bam.de:weldx/time/timedeltaindex-1.0.0" # legacy_tag
-      - tag: "asdf://weldx.bam.de/weldx/tags/time/datetimeindex-1.0.0"
-      - tag: "tag:weldx.bam.de:weldx/time/datetimeindex-1.0.0" # legacy_tag
+      - tag: "asdf://weldx.bam.de/weldx/tags/time/timedeltaindex-1.*"
+      - tag: "asdf://weldx.bam.de/weldx/tags/time/datetimeindex-1.*"
 
   optional_prop:
     tag: "tag:stsci.edu:asdf/core/ndarray-1.*"
