--- a/weldx/schemas/weldx.bam.de/weldx/measurement/measurement_chain-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/measurement/measurement_chain-1.0.0.yaml
@@ -76,9 +76,7 @@ definitions:
     description: |
       A graph node that represents a measurement signal.
     allOf:
-      - oneOf:
-        - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.0.0"
-        - tag: "tag:weldx.bam.de:weldx/core/graph/di_node-1.0.0" # legacy_tag
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_node-1.*"
       - type: object
         properties:
           attributes:
@@ -87,9 +85,7 @@ definitions:
               signal:
                 description: |
                   The measurement signal
-                oneOf:
-                  - tag: "asdf://weldx.bam.de/weldx/tags/measurement/signal-1.*"
-                  - tag: "tag:weldx.bam.de:weldx/measurement/signal-1.*" # legacy_tag
+                tag: "asdf://weldx.bam.de/weldx/tags/measurement/signal-1.*"
             required: [signal]
           edges:
             type: array
@@ -102,9 +98,7 @@ definitions:
     description: |
       A graph edge that represents a signal transformation.
     allOf:
-      - oneOf:
-        - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.0.0"
-        - tag: "tag:weldx.bam.de:weldx/core/graph/di_edge-1.0.0" # legacy_tag
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_edge-1.*"
       - type: object
         properties:
           attributes:
@@ -113,15 +107,11 @@ definitions:
               transformation:
                 description: |
                   The performed transformation.
-                oneOf:
-                  - tag: "asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-1.*"
-                  - tag: "tag:weldx.bam.de:weldx/measurement/signal_transformation-1.*" # legacy_tag
+                tag: "asdf://weldx.bam.de/weldx/tags/measurement/signal_transformation-1.*"
               equipment:
                 description: |
                   The equipment that performs the transformation
-                oneOf:
-                  - tag: "asdf://weldx.bam.de/weldx/tags/equipment/measurement_equipment-1.*"
-                  - tag: "tag:weldx.bam.de:weldx/equipment/measurement_equipment-1.*" # legacy_tag
+                tag: "asdf://weldx.bam.de/weldx/tags/equipment/measurement_equipment-1.*"
             required: [transformation]
           target_node:
             $ref: "#/definitions/signal_node"
@@ -140,17 +130,13 @@ properties:
   data_source:
     description: |
       The source that generates the first signal and is the first element of the chain.
-    oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/measurement/source-1.*"
-      - tag: "tag:weldx.bam.de:weldx/measurement/source-1.*" # legacy_tag
+    tag: "asdf://weldx.bam.de/weldx/tags/measurement/source-1.*"
 
   graph:
     description: |
       The measurement chain depicted by a graph. Signals are represented by the nodes and transformations by the edges.
     allOf:
-      - oneOf:
-        - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_graph-1.0.0"
-        - tag: "tag:weldx.bam.de:weldx/core/graph/di_graph-1.0.0" # legacy_tag
+      - tag: "asdf://weldx.bam.de/weldx/tags/core/graph/di_graph-1.*"
       - type: object
         properties:
           root_node:
@@ -159,9 +145,7 @@ properties:
   source_equipment:
     description: |
             The equipment that produces the source signal.
-    oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/equipment/measurement_equipment-1.*"
-      - tag: "tag:weldx.bam.de:weldx/equipment/measurement_equipment-1.*" # legacy_tag
+    tag: "asdf://weldx.bam.de/weldx/tags/equipment/measurement_equipment-1.*"
 
 
 propertyOrder: [name, data_source, graph, source_equipment]
