--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,8 +8,8 @@ repos:
       args: [--markdown-linebreak-ext=md]
     - id: end-of-file-fixer
     - id: check-yaml
-      exclude: devtools/conda.recipe/meta.yaml # doesn't play nice with jinja
-    - id: no-commit-to-branch
+      exclude: devtools/conda.recipe/meta.yaml  # doesn't play nice with jinja
+#    - id: no-commit-to-branch  # only makes sense for local pre-commit hooks
 -   repo: https://github.com/psf/black
     rev: 21.9b0
     hooks:
