--- a/.github/workflows/static_analysis.yml
+++ b/.github/workflows/static_analysis.yml
@@ -63,7 +63,7 @@ jobs:
         run: |
           mypy --install-types --non-interactive .
 
-  lint (pre-commit):
+  pre-commit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
