--- a/weldx/schemas/weldx.bam.de/legacy/core/mathematical_expression-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/legacy/core/mathematical_expression-1.0.0.yaml
@@ -19,8 +19,8 @@ examples:
       !<tag:weldx.bam.de:weldx/core/mathematical_expression-1.0.0>
         expression: a*x + b
         parameters:
-          a: !unit/quantity-1.1.0 {unit: volt, value: 1.2}
-          b: !unit/quantity-1.1.0 {unit: volt, value: 3.4}
+          a: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 1.2, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> volt}
+          b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 3.4, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> volt}
 
 type: object
 properties:
