--- a/weldx/schemas/weldx.bam.de/legacy/groove/iso_9692_1_2013_12/DUGroove-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/legacy/groove/iso_9692_1_2013_12/DUGroove-1.0.0.yaml
@@ -12,15 +12,15 @@ examples:
     - A simple DU-Groove
     - |
       !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/DUGroove-1.0.0>
-        t: !unit/quantity-1.1.0 {unit: millimeter, value: 33}
-        beta_1: !unit/quantity-1.1.0 {unit: degree, value: 8}
-        beta_2: !unit/quantity-1.1.0 {unit: degree, value: 12}
-        R: !unit/quantity-1.1.0 {unit: millimeter, value: 6}
-        R2: !unit/quantity-1.1.0 {unit: millimeter, value: 6}
-        b: !unit/quantity-1.1.0 {unit: millimeter, value: 2}
-        c: !unit/quantity-1.1.0 {unit: millimeter, value: 3}
-        h1: !unit/quantity-1.1.0 {unit: millimeter, value: 15}
-        h2: !unit/quantity-1.1.0 {unit: millimeter, value: 15}
+        t: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 33, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        beta_1: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 8, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> degree}
+        beta_2: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 12, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> degree}
+        R: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 6, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        R2: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 6, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 2, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        c: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 3, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        h1: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 15, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        h2: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 15, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
         code_number: ['2.7']
 
 type: object
