--- a/weldx/schemas/weldx.bam.de/legacy/groove/iso_9692_1_2013_12/FFGroove-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/legacy/groove/iso_9692_1_2013_12/FFGroove-1.0.0.yaml
@@ -12,50 +12,50 @@ examples:
     - A code 1.12 FF-Groove
     - |
       !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
-        t_1: !unit/quantity-1.1.0 {unit: millimeter, value: 5}
+        t_1: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 5, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
         code_number: '1.12'
   -
     - A code 3.1.1 FF-Groove
     - |
       !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
-        t_1: !unit/quantity-1.1.0 {unit: millimeter, value: 5}
-        t_2: !unit/quantity-1.1.0 {unit: millimeter, value: 7}
-        alpha: !unit/quantity-1.1.0 {unit: degree, value: 80}
-        b: !unit/quantity-1.1.0 {unit: millimeter, value: 1}
+        t_1: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 5, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        t_2: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 7, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        alpha: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 80, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> degree}
+        b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 1, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
         code_number: 3.1.1
   -
     - A code 3.1.2 FF-Groove
     - |
       !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
-        t_1: !unit/quantity-1.1.0 {unit: millimeter, value: 2}
-        t_2: !unit/quantity-1.1.0 {unit: millimeter, value: 5}
-        b: !unit/quantity-1.1.0 {unit: millimeter, value: 1}
+        t_1: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 2, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        t_2: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 5, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 1, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
         code_number: 3.1.2
   -
     - A code 3.1.3 FF-Groove
     - |
       !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
-        t_1: !unit/quantity-1.1.0 {unit: millimeter, value: 2}
-        t_2: !unit/quantity-1.1.0 {unit: millimeter, value: 5}
-        alpha: !unit/quantity-1.1.0 {unit: degree, value: 80}
-        b: !unit/quantity-1.1.0 {unit: millimeter, value: 1}
+        t_1: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 2, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        t_2: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 5, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        alpha: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 80, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> degree}
+        b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 1, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
         code_number: 3.1.3
   -
     - A code 4.1.2 FF-Groove
     - |
       !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
-        t_1: !unit/quantity-1.1.0 {unit: millimeter, value: 2}
-        t_2: !unit/quantity-1.1.0 {unit: millimeter, value: 5}
-        alpha: !unit/quantity-1.1.0 {unit: degree, value: 80}
-        e: !unit/quantity-1.1.0 {unit: millimeter, value: 4}
+        t_1: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 2, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        t_2: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 5, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        alpha: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 80, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> degree}
+        e: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 4, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
         code_number: 4.1.2
   -
     - A code 4.1.3 FF-Groove
     - |
       !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/FFGroove-1.0.0>
-        t_1: !unit/quantity-1.1.0 {unit: millimeter, value: 2}
-        t_2: !unit/quantity-1.1.0 {unit: millimeter, value: 5}
-        b: !unit/quantity-1.1.0 {unit: millimeter, value: 1}
+        t_1: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 2, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        t_2: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 5, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 1, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
         code_number: 4.1.3
 
 type: object
