--- a/weldx/schemas/weldx.bam.de/legacy/groove/iso_9692_1_2013_12/IGroove-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/legacy/groove/iso_9692_1_2013_12/IGroove-1.0.0.yaml
@@ -12,8 +12,8 @@ examples:
     - A simple I-Groove
     - |
       !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/IGroove-1.0.0>
-        t: !unit/quantity-1.1.0 {unit: millimeter, value: 4}
-        b: !unit/quantity-1.1.0 {unit: millimeter, value: 4}
+        t: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 4, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 4, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
         code_number: [1.2.1, 1.2.2, '2.1']
 
 type: object
