--- a/weldx/schemas/weldx.bam.de/legacy/groove/iso_9692_1_2013_12/VGroove-1.0.0.yaml
+++ b/weldx/schemas/weldx.bam.de/legacy/groove/iso_9692_1_2013_12/VGroove-1.0.0.yaml
@@ -12,10 +12,10 @@ examples:
     - A simple V-Groove
     - |
       !<tag:weldx.bam.de:weldx/groove/iso_9692_1_2013_12/VGroove-1.0.0>
-        t: !unit/quantity-1.1.0 {unit: millimeter, value: 15}
-        alpha: !unit/quantity-1.1.0 {unit: degree, value: 40}
-        b: !unit/quantity-1.1.0 {unit: millimeter, value: 2}
-        c: !unit/quantity-1.1.0 {unit: millimeter, value: 1}
+        t: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 15, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        alpha: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 40, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> degree}
+        b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 2, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
+        c: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 1, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> millimeter}
         code_number: ['1.3', '1.5']
 
 type: object
