--- a/weldx/schemas/weldx.bam.de/weldx/aws/process/gas_component-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/aws/process/gas_component-0.1.0.yaml
@@ -14,7 +14,7 @@ examples:
     - |
       !<asdf://weldx.bam.de/weldx/tags/aws/process/gas_component-0.1.0>
         gas_chemical_name: argon
-        gas_percentage: !unit/quantity-1.1.0 {unit: percent, value: 82}
+        gas_percentage: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 82, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent}
 
 type: object
 properties:
@@ -32,9 +32,7 @@ properties:
   gas_percentage:
     description: |
       Percentage by weight this gas occupies of the total gas mixture.
-    oneOf:
-      - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
-      - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
+    tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
     wx_unit: "percent"
 
 
