--- a/weldx/schemas/weldx.bam.de/weldx/measurement/error-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/measurement/error-0.1.0.yaml
@@ -13,7 +13,7 @@ examples:
     - An error representing a deviation of 0.1%.
     - |
       !<asdf://weldx.bam.de/weldx/tags/measurement/error-0.1.0>
-        deviation: !unit/quantity-1.1.0 {unit: percent, value: 0.1}
+        deviation: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 0.1, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> percent}
 
 type: object
 properties:
@@ -23,7 +23,6 @@ properties:
     oneOf:
       - type: number
       - tag: "asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.*"
-      - tag: "tag:stsci.edu:asdf/unit/quantity-1.*"
 required: [deviation]
 flowStyle: block
 ...
