--- a/weldx/schemas/weldx.bam.de/weldx/core/transformations/rotation-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/core/transformations/rotation-0.1.0.yaml
@@ -14,7 +14,7 @@ examples:
     - |
       !<asdf://weldx.bam.de/weldx/tags/core/transformations/rotation-0.1.0>
         angles: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0>
-          unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> deg
+          units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> deg
           value: !core/ndarray-1.0.0
             data: [10.0, 20.0, 60.0]
             datatype: float64
