--- a/weldx/schemas/weldx.bam.de/weldx/groove/iso_9692_1_2013_12/DHVGroove-0.1.0.yaml
+++ b/weldx/schemas/weldx.bam.de/weldx/groove/iso_9692_1_2013_12/DHVGroove-0.1.0.yaml
@@ -11,13 +11,13 @@ examples:
     - A simple DHV-Groove
     - |
       !<asdf://weldx.bam.de/weldx/tags/groove/iso_9692_1_2013_12/DHVGroove-0.1.0>
-        t: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 11, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
-        beta_1: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 35, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> deg}
-        beta_2: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 60, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> deg}
-        b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 3, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
-        c: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 1, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
-        h1: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 5, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
-        h2: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 5, unit: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
+        t: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 11, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
+        beta_1: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 35, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> deg}
+        beta_2: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 60, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> deg}
+        b: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 3, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
+        c: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 1, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
+        h1: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 5, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
+        h2: !<asdf://weldx.bam.de/weldx/tags/unit/quantity-0.1.0> {value: 5, units: !<asdf://weldx.bam.de/weldx/tags/unit/unit-0.1.0> mm}
         code_number: [2.9.1, 2.9.2]
 
 type: object
